# SVAES

./: .coveragerc  .env.dev.example  .env.example  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.es.md  README.fr.md  README.md  SECURITY.md  coverage.xml  cspell.json  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  nginx.dev.conf  pytest.ini  sonar-project.properties
api/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2fd6efcfd6c9_initial_schema.py  a1b2c3d4e5f6_rls_org_scoped_tables.py  a1b2c3d4e5f7_rbac_and_security_fields.py  a1b2c3d4e5f8_add_pending_task_to_release.py  a1b2c3d4e5f9_merge_pending_task_and_artifact_description.py  b1c2d3e4f5g6_add_api_keys_connector_impl_and_summary.py  c1d2e3f4g5h6_add_rules_to_verification_profile.py  d2e3f4g5h6i7_add_missing_project_columns.py  e3f4g5h6i7j8_add_name_to_release.py  f448135471a0_merge_rls_and_api_keys.py  f4g5h6i7j8k9_add_updated_at_to_connector_instance.py  g5h6i7j8k9l0_add_user_id_to_api_key.py  h6i7j8k9l0m1_add_notification_tables.py  i7j8k9l0m1n2_gdpr_compliance.py  j8k9l0m1n2o3_remove_organization_plan.py  k9l0m1n2o3p4_create_access_request_table.py  l0m1n2o3p4q5_add_activation_token_to_user.py  m1n2o3p4q5r6_add_totp_to_user.py  n2o3p4q5r6s7_add_cascade_delete_verification_profile.py  o3p4q5r6s7t8_fix_verdict_column_type.py  p3q4r5s6t7u8_add_token_version_widen_totp_secret.py  p4q5r6s7t8u9_add_password_reset_token.py  q5r6s7t8u9v0_cascade_delete_release_children.py  q7r8s9t0u1v2_add_webhook_fields_to_connector_instance.py  r6s7t8u9v0w1_fix_release_profile_fk_set_null.py  s7t8u9v0w1x2_cascade_delete_org_and_user.py  t8u9v0w1x2y3_add_feedback_table.py  u9v0w1x2y3z4_backfill_user_membership.py  u9v0x1y2z3a4b_backfill_user_membership.py  v1a2b3c4d5e6f_backfill_user_membership.py  w2x3y4z5a6b7_seed_rv07_plan_default.py  x1y2z3w4v5u6_add_error_connector_status.py  y2z3w4v5u6a7_add_system_profile.py  z1a2b3c4d5e6_add_description_to_artifact.py
api/src/: dependencies.py  main.py  test_complete.py  test_testclient.py
api/src/application/ports/input/: i_artifact_service.py  i_auth_service.py  i_connector_service.py  i_custom_role_service.py  i_export_service.py  i_notification_service.py  i_organization_service.py  i_profile_service.py  i_release_service.py  i_rules_service.py  i_task_service.py  i_template_service.py  i_user_service.py  i_verification_service.py
api/src/application/ports/output/: i_access_request_repository.py  i_api_key_repository.py  i_artifact_repository.py  i_connector.py  i_connector_registry.py  i_connector_repository.py  i_credential_encryptor.py  i_custom_role_repository.py  i_notification_repository.py  i_organization_repository.py  i_password_hasher.py  i_profile_repository.py  i_project_repository.py  i_release_repository.py  i_task_queue.py  i_template_repository.py  i_token_service.py  i_user_membership_repository.py  i_user_repository.py  i_verification_engine.py  i_verification_result_repository.py  i_verification_rule_repository.py
api/src/application/use_cases/: artifact_use_cases.py  auth_use_cases.py  configure_connector.py  connector_use_cases.py  get_verification_history.py  launch_verification.py
api/src/application/use_cases/main/: artifact_service.py  auth_service.py  connector_service.py  custom_role_service.py  export_service.py  get_verification_history.py  handle_incoming_webhook.py  launch_verification.py  manage_profile.py  notification_service.py  organization_service.py  profile_service.py  release_service.py  rules_service.py  task_service.py  template_service.py  user_service.py  verification_service.py  webhook_payload_parser.py
api/src/application/use_cases/others/: authenticate_user.py  create_organization.py  get_dashboard_metrics.py  manage_api_keys.py  manage_artifacts.py  test_connector.py  toggle_connector_status.py  (+1 more)
api/src/core/: audit.py  bootstrap.py  config.py  credential_encryptor.py  dependencies.py  email.py  logger.py  pseudonymizer.py  rate_limit.py  rule_names.py  webhook_signature.py
api/src/domain/: enums.py  exceptions.py
api/src/domain/entities/: access_request.py  api_key.py  artifact.py  connector_instance.py  custom_role.py  enums.py  notification_channel.py  notification_subscription.py  organization.py  project.py  release.py  template.py  user.py  verification_profile.py  verification_result.py  verification_rule.py
api/src/domain/ports/: i_connector_repository.py  i_release_repository.py  i_user_repository.py  i_verification_engine.py
api/src/infrastructure/database/: session.py
api/src/infrastructure/queue/: celery_app.py  celery_task_queue.py
api/src/infrastructure/security/: mock_task_queue.py
api/src/infrastructure/workers/: verification_worker.py
api/src/routers/: auth.py  connectors.py  profiles.py  users.py  verification_rules.py
api/src/schemas/: user.py
api/tests/: test_verification_worker_notify.py
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml
apps/api/alembic/versions/: a1b2c3d4e5f6_rls_org_scoped_tables.py
apps/api/src/: main.py
apps/api/src/api/: dependencies.py
apps/api/src/domain/: exceptions.py
apps/api/src/infrastructure/: config.py
apps/api/src/svaes_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engine/: .dockerignore  Cargo.toml  Dockerfile  README.md  lcov.info
engine/src/: aggregator.rs  evaluator.rs  lib.rs  main.rs  models.rs
engine/src/rules/: business_rules.rs  custom_field_check.rs  has_blocking_issues.rs  has_code_smells.rs  has_critical_vulnerabilities.rs  has_duplicated_code.rs  has_high_severity_vulnerabilities.rs  has_open_high_priority_issues.rs  has_security_hotspots.rs  has_uncovered_code.rs  meets_maximum_complexity.rs  meets_minimum_test_coverage.rs  mod.rs  rv01.rs  rv02.rs  rv03.rs  rv04.rs  rv05.rs  rv06.rs  rv07.rs  rv08.rs  rv09.rs  rv10.rs
engine/tests/: README.md  http_pipeline.rs
(+570 files in other folders)
