[project]
name = "svaes-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "alembic>=1.18.5",
    "sqlalchemy>=2.0.51",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.1.0",
    "PyJWT>=2.13.0",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "pydantic-settings>=2.14.2",
    "slowapi>=0.1.10",
    "celery>=5.6.3",
    "redis>=8.0.1",
    "httpx>=0.28.1",
    "reportlab>=5.0.0",
    "asyncpg>=0.31.0",
    "pyotp>=2.10.0",
    "segno>=1.6.6",
    "starlette>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=1.4.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "pytest-mock",
    "factory-boy",
    "faker",
    "testcontainers",
    "locust>=2.45.0",
    "aiosqlite>=0.22.1",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:The engine provided as bind produced a connection that is already in a transaction.*:sqlalchemy.exc.SAWarning",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "respx>=0.23.1",
]

[tool.coverage.run]
omit = [
    "src/main.py",
    "src/core/config.py",
    "src/__init__.py",
    "src/application/ports/**",
    "src/infrastructure/workers/verification_worker.py",
    "src/infrastructure/primary/routers/api/__init__.py",
    "src/infrastructure/primary/routers/api/v1/__init__.py",
    "src/infrastructure/secondary/database/models/__init__.py",
    "src/infrastructure/secondary/database/repositories/__init__.py",
    "src/infrastructure/secondary/connectors/task_management/__init__.py",
    "src/infrastructure/secondary/connectors/source_control/__init__.py",
    "src/infrastructure/secondary/connectors/documentation/__init__.py",
    "src/infrastructure/secondary/connectors/planning/__init__.py",
    "src/infrastructure/secondary/connectors/change_management/__init__.py",
    "src/infrastructure/secondary/queue/__init__.py",
    "src/infrastructure/secondary/queue/celery_app.py",
    "src/infrastructure/workers/__init__.py",
    "*/alembic/versions/*",
    "*/alembic/env.py",
    "*/migrations/*",
    "src/infrastructure/config/*",
    "src/infrastructure/settings*",
    "src/svaes_api.egg-info/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
