[package]
name = "svaes-engine"
version = "1.0.0"
edition = "2021"
authors = ["SVAES Team"]
description = "SVAES Verification Engine - Stateless artifact verification motor"

[dependencies]
actix-web = "4.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[[test]]
name = "http_pipeline"
path = "../tests/integration/engine/http_pipeline.rs"

[[test]]
name = "performance"
path = "../tests/performance/engine/performance.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1