[project]
name = "svaes-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.136.1",
    "uvicorn[standard]~=0.46.0",
    "alembic~=1.18.4",
    "sqlalchemy~=2.0.49",
    "psycopg[binary]~=3.2.0",
    "python-dotenv~=1.2.2",
    "passlib[bcrypt]~=1.7.4",
    "PyJWT~=2.12.0",
    "cryptography~=46.0.7",
    "pydantic-settings~=2.9.1",
    "email-validator~=2.2.0",
    "slowapi~=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests/api"]
pythonpath = ["src"]
